# PearVision

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  refactor.yaml
src/app/: __init__.py
src/app/Jetson Nano/: inference.py  run.sh  yolo_config.yml
src/app/Jetson Orin/: config.py  detect.py  inference.py  jetson_requirements.txt  yolo_config.yml
src/app/Raspberry Pi/: raspberry_requirements.txt  run.sh  streaming.py
src/greeting/: greeting_message.py
tests/Raspberry Pi/: test_camera.py
tests/greeting/: test_greeting_message.py
tests/orin/: test_remote_cam.py
